--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     </a>
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/ProjectGame/index.html" button class="button-32" class="card-title">Hangman<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Hagman/" button class="button-32" class="card-title">Hangman<span class="span"></span></a>
                     </h3>
 
 
