--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
                   <div class="card-content">
                     
-                    <a href="http://127.0.0.1:5500/ProjectGame/index.html">
+                    <a href="https://svtripathii.github.io/Hagman/">
                     </a>
                     <br>
                     <h3 class="h2">
