--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/TicTacToe-main/index.html" button class="button-32" class="card-title">Tic Tac Toe<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Tic-Tac-Toe/" button class="button-32" class="card-title">Tic Tac Toe<span class="span"></span></a>
                     </h3>
 
 
