--- a/index.html
+++ b/index.html
@@ -543,11 +543,11 @@
 
                   <div class="card-content">
                     
-                    <a href="http://127.0.0.1:5500/ProjectGame/index.html">
+                    <a href="https://svtripathii.github.io/Snake_Master/">
                     </a>
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/Snake-Master/index.html" button class="button-32" class="card-title">Snake Master<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Snake_Master/" button class="button-32" class="card-title">Snake Master<span class="span"></span></a>
                     </h3>
 
 
