--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/vertical-platformer-main/index.html"  button class="button-32" class="card-title">Vertical Platformer<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Vertical_Platformer/"  button class="button-32" class="card-title">Vertical Platformer<span class="span"></span></a>
                     </h3>
 
 
