--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                   <div class="card-content">
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/Connect4-master/index.html"  button class="button-32" class="card-title">Connect 4<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Connect4/"  button class="button-32" class="card-title">Connect 4<span class="span"></span></a>
                     </h3>
 
 
