--- a/index.html
+++ b/index.html
@@ -628,11 +628,11 @@
 
                   <div class="card-content">
                     
-                    <a href="http://127.0.0.1:5500/ProjectGame/index.html">
+                    <a href="https://svtripathii.github.io/Puzzle-Avg/">
                     </a>
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/Puzzle-Game-master/index.html" button class="button-32" class="card-title">Puzzle AVG<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Puzzle-Avg/" button class="button-32" class="card-title">Puzzle AVG<span class="span"></span></a>
                     </h3>
 
 
