--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                     </a>
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/fighting-game-main/index.html" button class="button-32" class="card-title">Fighting-Game<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Fighter_Game/" button class="button-32" class="card-title">Fighting-Game<span class="span"></span></a>
                     </h3>
 
 
