--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                   <div class="card-content">
                     <br>
                     <h3 class="h3">
-                      <button class="button-32" class="card-title"> Upcoming <span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Game-/" button class="button-32" class="card-title">Adventure of Madhu<span class="span"></span></a>
                     </h3>
 
 
