--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/breakout-master/index.html" button class="button-32" class="card-title">Breakout-Master<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Breakout-Master/" button class="button-32" class="card-title">Breakout-Master<span class="span"></span></a>
                     </h3>
 
 
@@ -758,7 +758,7 @@
                   <div class="card-content">
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/doodle-jump-master/index.html" button class="button-32" class="card-title">Doodle Jump Master<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/DoodleJumpMaster/" button class="button-32" class="card-title">Doodle Jump Master<span class="span"></span></a>
                     </h3>>
 
 
@@ -802,7 +802,7 @@
                     </a>
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/Pong-Game-main/index.html" button class="button-32" class="card-title">Pong-Game<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Pong/" button class="button-32" class="card-title">Pong-Game<span class="span"></span></a>
                     </h3>
 
 
@@ -823,7 +823,7 @@
 
                     <br>
                     <h3 class="h2">
-                      <a href="http://127.0.0.1:5500/candy-crush-master/index.html" button class="button-32" class="card-title">Candy-crush<span class="span"></span></a>
+                      <a href="https://svtripathii.github.io/Candy_Crush/" button class="button-32" class="card-title">Candy-crush<span class="span"></span></a>
                     </h3>
 
 
